[gd_scene load_steps=22 format=2]

[ext_resource path="res://sprites/Mapa TWHG.png" type="Texture" id=1]
[ext_resource path="res://scripts/Node2D.gd" type="Script" id=2]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://sprites/direita.png" type="Texture" id=4]
[ext_resource path="res://sprites/baixo.png" type="Texture" id=5]
[ext_resource path="res://sprites/esquerda.png" type="Texture" id=6]
[ext_resource path="res://sprites/cima.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 132.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 283.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34.4999, 32.0001 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.24208, 57.5777 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19, 320.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 71.5, 18.9998 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 42.75, 33.75 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 45, 35 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 10, 30.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 14, 47.25 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9.5, 9.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 4.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 28 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 24, 17.5 )

[node name="WHG" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.807843, 0.807843, 0.807843, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 179.5, 322 )
scale = Vector2( 0.798658, 0.917143 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="Node" parent="."]

[node name="parede10" type="StaticBody2D" parent="Walls"]
position = Vector2( 179, 51 )
rotation = -1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/parede10"]
position = Vector2( -0.499634, -3.05176e-05 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="parede1" type="StaticBody2D" parent="Walls"]
position = Vector2( 30, 366 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede1"]
position = Vector2( 12.5, -39.5 )
shape = SubResource( 2 )

[node name="parede2" type="StaticBody2D" parent="Walls"]
position = Vector2( 18, 601 )
rotation = -1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede2"]
position = Vector2( 8.49969, 159.5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="parede3" type="StaticBody2D" parent="Walls"]
position = Vector2( 277, 267 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede3"]
position = Vector2( 8.5, 46 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="parede4" type="StaticBody2D" parent="Walls"]
position = Vector2( 91, 156 )
rotation = -1.56557
scale = Vector2( 2.21713, 1.28688 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede4"]
position = Vector2( 7.38552, 67.4475 )
scale = Vector2( 3.63701, 0.983956 )
shape = SubResource( 5 )

[node name="parede8" type="StaticBody2D" parent="Walls"]
position = Vector2( 303, 112 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede8"]
position = Vector2( 6, 69 )
shape = SubResource( 5 )

[node name="parede11" type="StaticBody2D" parent="Walls"]
position = Vector2( 245, 205 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede11"]
position = Vector2( 8, 69 )
shape = SubResource( 5 )

[node name="parede5" type="StaticBody2D" parent="Walls"]
position = Vector2( 332, 296 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede5"]
position = Vector2( -5, 62.5 )
shape = SubResource( 6 )

[node name="parede6" type="StaticBody2D" parent="Walls"]
position = Vector2( 41, 258 )
rotation = -1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede6"]
position = Vector2( 18.9999, 81.5001 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="parede7" type="StaticBody2D" parent="Walls"]
position = Vector2( 152, 237 )
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede7"]
position = Vector2( -116.25, -0.750427 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="parede8" type="StaticBody2D" parent="Walls/parede7"]
position = Vector2( -74.0005, 122 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede7/parede8"]
position = Vector2( 8.5, 46.7499 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="parede9" type="StaticBody2D" parent="Walls/parede7"]
position = Vector2( -211, -66.0008 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede7/parede9"]
position = Vector2( -10, 35.5 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="parede12" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede12"]
position = Vector2( 208, 486 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/parede12"]
position = Vector2( 245, 89.5 )
shape = SubResource( 15 )

[node name="parede13" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/parede13"]
position = Vector2( 180, 429.75 )
shape = SubResource( 14 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 3
collision_mask = 11
script = ExtResource( 3 )

[node name="Icon" type="ColorRect" parent="KinematicBody2D"]
margin_left = 71.0
margin_top = 543.0
margin_right = 90.0
margin_bottom = 562.0
color = Color( 0.443137, 0.92549, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 80.5, 552.5 )
shape = SubResource( 9 )

[node name="key" type="Node" parent="."]

[node name="KeyCheck" type="ColorRect" parent="key"]
visible = false
margin_left = 302.0
margin_top = 18.0
margin_right = 325.0
margin_bottom = 41.0
color = Color( 1, 0.584314, 0, 1 )

[node name="key" type="StaticBody2D" parent="key"]
position = Vector2( 261, 499 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="key/key"]
margin_left = -5.0
margin_top = -4.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 1, 0.537255, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="key/key"]
position = Vector2( 1.5, 2 )
shape = SubResource( 10 )

[node name="areas" type="Node" parent="."]

[node name="Compliance" type="Area2D" parent="areas"]
position = Vector2( 101, 133 )

[node name="ColorRect2" type="ColorRect" parent="areas/Compliance"]
margin_left = 37.0
margin_top = -71.0
margin_right = 93.0
margin_bottom = -15.0
color = Color( 0.12549, 1, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/Compliance"]
position = Vector2( 63.5, -43 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="areas"]
position = Vector2( 235, 103 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="areas/Area2D"]
position = Vector2( 44, -0.5 )
shape = SubResource( 12 )

[node name="Controles" type="Node" parent="."]

[node name="Cima" type="TouchScreenButton" parent="Controles"]
position = Vector2( 178, 491 )
scale = Vector2( 1.8125, 2.25 )
normal = ExtResource( 7 )

[node name="Baixo" type="TouchScreenButton" parent="Controles"]
position = Vector2( 180, 583 )
scale = Vector2( 1.8125, 2.09375 )
normal = ExtResource( 5 )

[node name="Direita" type="TouchScreenButton" parent="Controles"]
position = Vector2( 229, 538 )
scale = Vector2( 2.21875, 1.875 )
normal = ExtResource( 4 )

[node name="Esquerda" type="TouchScreenButton" parent="Controles"]
position = Vector2( 118, 541 )
scale = Vector2( 2.1875, 1.84375 )
normal = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 77.0
margin_top = 13.0
margin_right = 296.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pegue os blocos laranjas(chaves)"

[connection signal="body_shape_entered" from="areas/Compliance" to="KinematicBody2D" method="_on_Compliance_body_shape_entered"]
[connection signal="body_shape_entered" from="areas/Area2D" to="KinematicBody2D" method="_on_Area2D_body_shape_entered"]
[connection signal="pressed" from="Controles/Cima" to="KinematicBody2D" method="_on_Cima_pressed"]
[connection signal="released" from="Controles/Cima" to="KinematicBody2D" method="_on_Cima_released"]
[connection signal="pressed" from="Controles/Baixo" to="KinematicBody2D" method="_on_Baixo_pressed"]
[connection signal="released" from="Controles/Baixo" to="KinematicBody2D" method="_on_Baixo_released"]
[connection signal="pressed" from="Controles/Direita" to="KinematicBody2D" method="_on_Direita_pressed"]
[connection signal="released" from="Controles/Direita" to="KinematicBody2D" method="_on_Direita_released"]
[connection signal="pressed" from="Controles/Esquerda" to="KinematicBody2D" method="_on_Esquerda_pressed"]
[connection signal="released" from="Controles/Esquerda" to="KinematicBody2D" method="_on_Esquerda_released"]
